# CMake-Learning

01-basic/: README.md
01-basic/A-hello-cmake/: CMakeLists.txt
01-basic/B-hello-headers/: CMakeLists.txt
01-basic/C-static-library/: CMakeLists.txt
01-basic/D-shared-library/: CMakeLists.txt
01-basic/E-installing/: CMakeLists.txt
01-basic/H-third-party-library/: CMakeLists.txt
02-sub-projects/: README.md
02-sub-projects/A-basic/: CMakeLists.txt
02-sub-projects/A-basic/subbinary/: CMakeLists.txt
02-sub-projects/A-basic/sublibrary1/: CMakeLists.txt
02-sub-projects/A-basic/sublibrary2/: CMakeLists.txt
